# MetricHub

./: .dockerignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  SECURITY.MD  docker-compose.yml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: test.yaml
docs/: README.md
docs/tychnical/: README.md
docs/tychnical/ru/: README.md  auth.md
docs/users/: README.md
docs/users/en/: instalation.md
docs/users/ru/: instalation.md
src/: main.py
src/metrichub/: __init__.py  metrchub.py
tests/: conftest.py  test_simple.py
