[project]
name = "metrichub"
version = "0.1.0"
description = "A project for analyzing the efficiency of your applications and servers. Receives,  displays, and processes any data. Use whatever you want with your data."
authors = [
    {name = "Anton Golubchikov",email = "anton1programmist@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]

[tool.poetry]
packages = [{include = "metrichub", from = "src"}]


[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
ruff = "^0.12.7"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration

[tool.ruff]
line-length = 100

target-version = "py312"

[tool.ruff.lint]
# See list of rules at: https://docs.astral.sh/ruff/rules/
select = ["F", "E", "W", "I", "B", "N", "D", "PT", "PYI", "RET", "RUF"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"

# Mypy configuration

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
